# faker_agent

./: .gitignore  CLAUDE.md  CODING_GUIDANCE_UPDATED.md  Coding_guidance.md  README.md  WARP.md  package-lock.json  pyproject.toml  run_tests.bat  run_tests.sh  setup_uv.bat  start_dev.bat  start_dev.sh
.claude/: settings.local.json
.claude/agents/: coding-guidance-advisor.md
backend/: .env.example  __init__.py  main.py  requirements.txt
backend/api/: __init__.py  agent_routes.py  routes.py
backend/config/: settings.py
backend/core/: __init__.py  agent.py  errors.py  simple_agent.py
backend/interface/: __init__.py
backend/modules/: __init__.py
backend/tests/: __init__.py
docs/: README.md  api_spec.md  architecture.md  frontend_development_guide.md  guide.md  protocol_guide.md  protocol_support.md  usage_guide.md
docs/architecture/: overview.md  protocol_integration.md
docs/backend/: design.md  design_summary.md  guide.md  protocol_layer_summary.md
docs/design/: ui_design.md  workflow.md
docs/frontend/: development_guide.md  display_settings_guide.md  protocol_support.md  step.md  summary.md
docs/progress/: 2025-08-26.md  2025-08-28.md  2025-08-28_frontend.md  2025-08-29-update.md  2025-08-29.md
docs/standards/: code_style.md  doc_standards.md
frontend/: debug_tool_tags.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
tests/: __init__.py  conftest.py  test_api_routes.py  test_calculator.py  test_integration.py  test_redis_memory.py  test_web_search.py
(+110 files in other folders)
