[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "faker_agent"
version = "0.1.0"
description = "A modular, extensible intelligent agent platform"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Faker Agent Team" },
]
dependencies = [
    "fastapi>=0.103.0",
    "uvicorn>=0.23.2",
    "litellm>=1.9.0",
    "pydantic>=2.3.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]

[tool.uv]
python = "3.10"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["litellm.*"]
ignore_missing_imports = true